# ComfyUI-EasyIllustrious

./: .gitignore  LICENSE  README.md  __init__.py  pyproject.toml  requirements.txt
assets/: illustrious-list-convert.py  illustrious_list_convert.py  noobai-list-convert.py
example_workflows/: Basic.json  Color Corrector.json  Custom Scheduler.json  Multi Pass.json  Node Gallery.json
src/: __init__.py  api_handler.py  characters_small.py  dynamic_loader.py  e621_artists.py  e621_characters.py  lazy_loader.py  quick_loader.py  search_widgets.py  web_routes.py
src/core/: anime_scene_system.py
src/nodes/: __init__.py  attention_couple.py  auto_outpaint.py  clip_encoder.py  color_corrector.py  color_corrector_server.py  color_suite.py  emotions.py  illustrious_regional_conditioning.py  image_comparer.py  ksampler.py  latent.py  multi_pass_sampler.py  pony_tokens.py  poses.py  scheduler.py  smart_cache_corrector.py  smart_cache_server.py  smart_prompt_generator.py  tipo_optimizer.py  tipo_server.py  vae.py
web/docs/: IllustriousArtists.md  IllustriousAttentionCouple.md  IllustriousAutoOutpaint.md  IllustriousCLIPTextEncoder.md  IllustriousCharacters.md  IllustriousClothing.md  IllustriousColorCorrector.md  IllustriousColorSuite.md  IllustriousE621Artists.md  IllustriousE621Characters.md  IllustriousEmptyLatentImage.md  IllustriousHairstyles.md  IllustriousKSamplerPresets.md  IllustriousKSamplerPro.md  IllustriousLatentUpscale.md  IllustriousMasterModel.md  IllustriousMultiPassSampler.md  IllustriousNegativeCLIPEncoder.md  IllustriousPonyTokens.md  IllustriousPoses.md  (+9 more)
(+16 files in other folders)
