# pyproject.toml
[project]
name = "Comfyui-EasyIllustrious"
authors = [
    {name = "Regi E",email = "regi@bynine.io"}
]
description = "ComfyUI-EasyIllustrious is a custom node suite to make working with Illustrious models easier and more intuitive"
version = "1.1.1"

license = { file = "LICENSE" }
dependencies  = [
    "psutil",
    "colorama",
    "tqdm",
    "inquirer"
]

keywords = [
    "ComfyUI",
    "Illustrious",
    "Stable Diffusion",
    "Anime",
    "Prompting",
    "Sampler",
    "Scheduler",
    "Color Correction"
]

[project.urls]
Repository = "https://github.com/regiellis/ComfyUI-EasyIllustrious"

[tool.comfy]
PublisherId = "itsjustregi"
DisplayName = "Comfyui-EasyIllustrious"
Icon = "" 
